Fixed overflow in sidebar box menus

--- a/wcfsetup/install/files/style/layout/box.scss
+++ b/wcfsetup/install/files/style/layout/box.scss
@@ -424,11 +424,16 @@
 		
 		.boxMenu {
 			.boxMenuLink {
-				display: block;
+				align-items: flex-start;
+				display: flex;
 				padding: 5px 20px;
 				
+				.boxMenuLinkTitle {
+					flex: 1 1 auto;
+				}
+				
 				.badge {
-					float: right;
+					flex: 0 0 auto;
 				}
 			}
 			
